--- a/package.json
+++ b/package.json
@@ -21,8 +21,11 @@
     "dependencies": {
         "@fortawesome/fontawesome-free": "^6.4.0",
         "@meforma/vue-toaster": "^1.3.0",
+        "@vueform/multiselect": "^2.6.2",
         "lodash": "^4.17.21",
         "moment": "^2.29.4",
-        "theme-change": "^2.5.0"
+        "sweetalert2": "^11.7.20",
+        "theme-change": "^2.5.0",
+        "vue-currency-input": "^3.0.5"
     }
 }
